src/test/ui/issues/issue-32709.stderr
error[E0277]: the trait bound `(): std::convert::From<{integer}>` is not satisfied
  --> $DIR/issue-32709.rs:4:5
   |
LL |     Err(5)?; //~ ERROR
   |     ^^^^^^^ the trait `std::convert::From<{integer}>` is not implemented for `()`
   |
   = note: required by `std::convert::From::from`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
